# unattended-agent-benchmark

./: .gitmodules  LICENSE  README.md  SESSION_UPDATES.md  pyproject.toml
core/: action.py  engine.py  environment.py  event.py  monkey_patch.py  objective.py  observation.py  observation_policy.py  scenario.py  scenario_runner.py  simulation_state.py  system_prompt.py
scripts/: __init__.py  simple_chat.py  simple_scenario.py  simple_scenario.yaml
